syntax = "proto3";
option go_package = "./proto";



package offer;

option java_outer_classname = "OfferOuterClass";
option java_package = "org.example.apigateway.grpc.offer";


service Offer {
  rpc GetOffers(GetOffersRequest) returns (GetOffersResponse);
  rpc GetOffer(GetOfferRequest) returns (GetOfferResponse);
  rpc CreateOffer(CreateOfferRequest) returns (CreateOfferResponse);
  rpc UpdateOffer(UpdateOfferRequest) returns (UpdateOfferResponse);
  rpc DeleteOffer(DeleteOfferRequest) returns (DeleteOfferResponse);
}

message OfferItem{
  string id = 1;
  string name = 2;
  string agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
}

message GetOffersRequest{
}

message GetOffersResponse{
  repeated OfferItem offers = 1;
}

message GetOfferRequest{
  string name = 1;
}

message GetOfferResponse{
  string id = 1;
  string name = 2;
  string agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
}

message CreateOfferRequest{
  string name = 1;
  string agency_id = 2;
  string description = 3;
  int32 price = 4;
  string date = 5;
}

message CreateOfferResponse{
  string id = 1;
  string name = 2;
  string agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
}

message UpdateOfferRequest{
  string id = 1;
  string name = 2;
  string agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
}

message UpdateOfferResponse{
  string id = 1;
  string name = 2;
  string agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
}

message DeleteOfferRequest{
  string id = 1;
}

message DeleteOfferResponse{
  string id = 1;
  string name = 2;
  string agency_id = 3;
  string description = 4;
  int32 price = 5;
  string date = 6;
}